# Action-Recognition-for-Classroom-Application

./: .gitignore  README.md  environment.yml  landmark_extractor.py  main.py  pyproject.toml  requirements.txt  training.py
annotation/: __init__.py  annotation.py
checkpoint/: keras_metadata.pb  saved_model.pb
checkpoint/variables/: variables.index
data_generator/: __init__.py  data_generator.py
data_generator/keypoints_extractor/: __init__.py  keypoints_extractor.py
data_processing/: __init__.py  data_processing.py
data_processing/keypoints_extractor/: __init__.py  keypoints_extractor.py
model/: __init__.py  lstm_model.py
