[tool.poetry]
name = "action-recognition-for-classroom-application"
version = "0.1.0"
description = "The program recognizes an orchestrator's actions through body landmarks. The recognized actions are used to control multiple classroom's devices."
authors = ["vuong-viet-hung <vuongviethung156@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
tensorflow = "^2.9.1"
kaggle = "^1.5.12"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
